refactor: toList()리팩토링