@@ -1,7 +1,6 @@
 package roomescape.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import roomescape.dao.TimeDAO;
@@ -31,7 +30,7 @@ public class TimeService {
         List<Time> times = timeDAO.findAll();
         return times.stream()
                 .map(TimeResDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
